# AISDexam

./: .gitignore  CMakeLists.txt
Graphs/: Dijkstra.c  Kraskal.c  MatrixSm.c  Prim.c  SSmez.c
Sortings/: Assertion.c  HeapSort.c  Linear.c  QuickSort.c  Shell.c
Trees/: AVLTree.c  BinaryTree.c  ExpressionTree.c  RedBlackTree.c
